--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ sha2 = "0.9"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0"
 error-chain = { version = "0.12.4", default-features = false }
-reqwest = { version = "0.11.3", features = ["blocking", "json"] }
+reqwest = { version = "0.11.3", features = ["json"] }
 tungstenite = "0.13.0"
 url = "2.2.2"
 
@@ -40,6 +40,7 @@ env_logger = "0.8.3"
 criterion = "0.3"
 float-cmp = "0.8.0"
 serde_json = "1.0"
+tokio = { version = "1.0", features = ["full"] }
 
 [[bench]]
 name = "websocket_benchmark"
