--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -2,3 +2,4 @@ binop_separator = "Back"
 fn_args_layout = "Compressed"
 newline_style = "Unix"
 reorder_imports = false
+force_multiline_blocks = true
